--- a/jsp-microform/pom.xml
+++ b/jsp-microform/pom.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.cybersource.examples.flex</groupId>
     <artifactId>jsp-microform</artifactId>
-    <version>1.0</version> <!-- This example relates to Flex-API BETA v1 -->
+    <version>1.0</version>
+    <!-- This example relates to Flex-API BETA v1 -->
     <packaging>war</packaging>
-    
     <name>Flex microform JSP Demo</name>
     <description>A mocked merchant checkout and payment pages using Flex-API and microform tokenization</description>
     <url>https://github.com/CyberSource/cybersource-flex-samples/java/jsp-microform</url>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -27,8 +23,7 @@
                 <version>3.2.0</version>
             </plugin>
         </plugins>
-    </build>    
-    
+    </build>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -37,15 +32,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>javax.servlet.jsp-api</artifactId>
-            <version>2.3.1</version>
-            <scope>provided</scope>
-        </dependency>        
-        <dependency>
             <groupId>com.cybersource</groupId>
             <artifactId>cybersource-rest-client-java</artifactId>
-            <version>0.0.22</version>
+            <version>0.0.35</version>
         </dependency>
     </dependencies>
 </project>
