--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,52 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.vscode/settings.json
+jsp-flexjs/.project
+jsp-flexjs/.settings/org.eclipse.core.resources.prefs
+jsp-flexjs/.settings/org.eclipse.m2e.core.prefs
+jsp-microform/.idea/artifacts/jsp_microform_war.xml
+jsp-microform/.idea/artifacts/jsp_microform_war_exploded.xml
+jsp-microform/.idea/compiler.xml
+jsp-microform/.idea/encodings.xml
+jsp-microform/.idea/inspectionProfiles/Project_Default.xml
+jsp-microform/.idea/jarRepositories.xml
+jsp-microform/.idea/libraries/Maven__asm_asm_3_3_1.xml
+jsp-microform/.idea/libraries/Maven__com_cybersource_AuthenticationSdk_0_0_17.xml
+jsp-microform/.idea/libraries/Maven__com_cybersource_cybersource_rest_client_java_0_0_35.xml
+jsp-microform/.idea/libraries/Maven__com_github_stephenc_jcip_jcip_annotations_1_0_1.xml
+jsp-microform/.idea/libraries/Maven__com_google_code_gson_gson_2_8_1.xml
+jsp-microform/.idea/libraries/Maven__com_nimbusds_nimbus_jose_jwt_9_9_1.xml
+jsp-microform/.idea/libraries/Maven__commons_lang_commons_lang_2_6.xml
+jsp-microform/.idea/libraries/Maven__io_gsonfire_gson_fire_1_8_0.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_0.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_02.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_03.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_jsp_javax_servlet_jsp_api_2_3_1.xml
+jsp-microform/.idea/libraries/Maven__joda_time_joda_time_2_9_9.xml
+jsp-microform/.idea/libraries/Maven__net_minidev_accessors_smart_2_4_7.xml
+jsp-microform/.idea/libraries/Maven__net_minidev_asm_1_0_2.xml
+jsp-microform/.idea/libraries/Maven__net_minidev_json_smart_2_4_7.xml
+jsp-microform/.idea/libraries/Maven__org_apache_logging_log4j_log4j_1_2_api_2_13_3.xml
+jsp-microform/.idea/libraries/Maven__org_apache_logging_log4j_log4j_api_2_13_3.xml
+jsp-microform/.idea/libraries/Maven__org_apache_logging_log4j_log4j_core_2_13_3.xml
+jsp-microform/.idea/libraries/Maven__org_bouncycastle_bcprov_jdk16_1_45.xml
+jsp-microform/.idea/libraries/Maven__org_ow2_asm_asm_9_1.xml
+jsp-microform/.idea/libraries/Maven__org_slf4j_slf4j_api_1_6_4.xml
+jsp-microform/.idea/misc.xml
+jsp-microform/.idea/vcs.xml
+jsp-microform/.idea/workspace.xml
+jsp-microform/.settings/org.eclipse.core.resources.prefs
+jsp-microform/.settings/org.eclipse.m2e.core.prefs
+jsp-microform/jsp-microform.iml
+jsp-microform/target/lib/log4j-2.11.0.pom
+jsp-microform/target/maven-archiver/pom.properties
+jsp-microform/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+jsp-microform/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+jsp-microform/.idea/compiler.xml
+jsp-microform/.idea/encodings.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_0.xml
+jsp-microform/.idea/libraries/Maven__javax_servlet_jsp_javax_servlet_jsp_api_2_3_1.xml
+jsp-microform/.idea/misc.xml
+jsp-microform/.idea/workspace.xml
+jsp-microform/jsp-microform.iml
